--- a/style.css
+++ b/style.css
@@ -146,3 +146,10 @@ body{
 .name{
   color: hsl(0, 0%, 100%);
 }
+
+@media only screen and (max-width: 400px){
+  .container{
+    width: 100%;
+    margin: 4rem 0rem 0rem 0rem;
+  }
+}
