--- a/style.css
+++ b/style.css
@@ -39,7 +39,56 @@ body{
   height: fit-content;
   border-radius: 10px;
 }
+.image img :hover{
+  filter: hue-rotate(100deg);
+}
+.hover_image{
+  position: absolute;
+  left: 31.5rem;
+  top: 2rem;
+  filter: opacity(20%);
+  display: none;
+  width: 20%;
+  padding: 3rem;
+}
+.hover_image{
+  transform: scale(0.5);
+}
 
+.icon-view {
+  background-color: hsl(178, 100%, 50%);
+  opacity: 0;
+  transition: 300ms;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 8rem;
+  left: 8rem;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon{
+  transform: scale(0.2);  
+}
+
+figure:hover .icon-view {
+  opacity: 0.4;
+  cursor: pointer;
+}
+figure {
+  margin: 0 auto;
+  position: relative;
+  transition: 300ms;
+}
+
+.etherum-img {
+  border-radius: 8px;
+  z-index: 1;
+}
 .text {
   display: grid;
   grid-template-columns: 1fr;
@@ -58,6 +107,11 @@ body{
   grid-area: heading; 
   color: hsl(0, 0%, 100%);
   font-size: 12px;
+}
+
+h1:hover{
+  color: hsl(178, 100%, 50%);
+  cursor: pointer;
 }
 
 .description {
@@ -145,6 +199,11 @@ body{
 
 .name{
   color: hsl(0, 0%, 100%);
+}
+
+.name:hover{
+  color: hsl(178, 100%, 50%);
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 400px){
