--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
   background-color: hsl(216, 50%, 16%);
   padding: 1rem;
   border-radius: 20px;
-  margin-left: 38%;
+  margin: 10% 0% 0% 38%;
 }
 
 .image { 
