--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .attribution {
   font-size: 11px;
-  text-align:left;
+  text-align: left;
   display: flex;
   justify-content: center;
 }
@@ -8,9 +8,9 @@
   color: hsl(228, 45%, 44%);
 }
 
-body{
+body {
   background-color: hsl(217, 54%, 11%);
-  font-family: outfit;  
+  font-family: outfit;
 }
 
 .container {
@@ -27,22 +27,22 @@ body{
   background-color: hsl(216, 50%, 16%);
   padding: 1rem;
   border-radius: 20px;
-  margin: 10% 0% 0% 38%;
+  margin: 2% 0% 0% 38%;
 }
 
-.image { 
-  grid-area: image; 
+.image {
+  grid-area: image;
   height: min-content;
 }
-.image img{
+.image img {
   width: 100%;
   height: fit-content;
   border-radius: 10px;
 }
-.image img :hover{
+.image img :hover {
   filter: hue-rotate(100deg);
 }
-.hover_image{
+.hover_image {
   position: absolute;
   left: 31.5rem;
   top: 2rem;
@@ -51,7 +51,7 @@ body{
   width: 20%;
   padding: 3rem;
 }
-.hover_image{
+.hover_image {
   transform: scale(0.5);
 }
 
@@ -63,16 +63,16 @@ body{
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 8rem;
-  left: 8rem;
+  top: 8.4rem;
+  left: 8.4rem;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.icon{
-  transform: scale(0.2);  
+.icon {
+  transform: scale(0.2);
 }
 
 figure:hover .icon-view {
@@ -103,19 +103,18 @@ figure {
   grid-area: text;
 }
 
-.heading { 
-  grid-area: heading; 
+.heading {
+  grid-area: heading;
   color: hsl(0, 0%, 100%);
   font-size: 12px;
 }
 
-h1:hover{
+h1:hover {
   color: hsl(178, 100%, 50%);
   cursor: pointer;
 }
 
 .description {
-
   justify-self: start;
   grid-area: description;
   color: hsl(215, 51%, 70%);
@@ -127,13 +126,11 @@ h1:hover{
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas:
-    "price time";
+  grid-template-areas: "price time";
   grid-area: order;
 }
 
 .price {
-
   justify-self: start;
   grid-area: price;
   display: flex;
@@ -142,7 +139,7 @@ h1:hover{
   color: hsl(178, 100%, 50%);
   font-size: 14px;
 }
-.price img{
+.price img {
   margin-right: 1rem;
 }
 
@@ -156,7 +153,7 @@ h1:hover{
   font-size: 14px;
 }
 
-.time img{
+.time img {
   margin-right: 1rem;
 }
 
@@ -166,8 +163,7 @@ h1:hover{
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas:
-    "creator_image creator_text";
+  grid-template-areas: "creator_image creator_text";
   justify-self: start;
   grid-area: creator;
   color: hsl(215, 51%, 70%);
@@ -180,35 +176,33 @@ h1:hover{
   justify-self: start;
   grid-area: creator_image;
   width: fit-content;
-
 }
-.creator_image img{
+.creator_image img {
   width: 50%;
   border: 1px solid hsl(0, 0%, 100%);
   border-radius: 50%;
 }
 
-.creator_text { 
-  grid-area: creator_text; 
+.creator_text {
+  grid-area: creator_text;
   display: flex;
   align-items: center;
   width: max-content;
   font-size: 14px;
 }
 
-
-.name{
+.name {
   color: hsl(0, 0%, 100%);
 }
 
-.name:hover{
+.name:hover {
   color: hsl(178, 100%, 50%);
   cursor: pointer;
 }
 
-@media only screen and (max-width: 400px){
-  .container{
+@media only screen and (max-width: 400px) {
+  .container {
     width: 91%;
-    margin: 4rem 0rem 0rem 0rem;
+    margin: 1rem 0rem 0rem 0rem;
   }
 }
